test/deprecated/legacy-classes-opt.compopts
--legacy-classes
--no-legacy-classes
